--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!--INFORMAÇÕES PESSOAIS-->
                 <div class="coluna coluna-direita">
                     <h1>Fernando Fernandes Francisco</h1>
-                    <p>Facilitador Kenzie Academy</p>
+                    <p>Técnico de informática</p>
 
                     <ul>
                         <li>
@@ -90,10 +90,10 @@
                         <span class="topo-direita"></span>
                         <h2>Cursos</h2>
                         <ul>
-                            <li>HTML 5 - Kenzie Academy</li>
-                            <li>CSS 3 - Kenzie Academy</li>
-                            <li>Java Script - Kenzie Academy</li>
-                            <li>React - Kenzie Academy</li>
+                            <li>HTML 5 - Instituição Senac</li>
+                            <li>CSS 3 - Instituição Senac</li>
+                            <li>Java Script - Instituição Senac</li>
+                            <li>React - Instituição Senac</li>
                         </ul>
                         <span class="baixo-esquerda"></span>
                     </section>
@@ -107,18 +107,18 @@
                         <ul>
                             <li>
                                 <h3>Falicitador de treinamento</h3>
-                                <strong>Nome da empresa Kenzie Academy Brasil - Tempo integral</strong>
-                                <p>Periodo do empregador. de 2020 - o momento Localidade Curitiba, Paraná</p>
+                                <strong>Nome da empresa - Tempo integral</strong>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                             </li>
                             <li>
                                 <h3>Falicitador de treinamento</h3>
-                                <strong>Nome da empresa Kenzie Academy Brasil - Tempo integral</strong>
-                                <p>Periodo do empregador. de 2020 - o momento Localidade Curitiba, Paraná</p>
+                                <strong>Nome da empresa - Tempo integral</strong>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                             </li>
                             <li>
                                 <h3>Falicitador de treinamento</h3>
-                                <strong>Nome da empresa Kenzie Academy Brasil - Tempo integral</strong>
-                                <p>Periodo do empregador. de 2020 - o momento Localidade Curitiba, Paraná</p>
+                                <strong>Nome da empresa - Tempo integral</strong>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                             </li>
                         </ul>
                         <span class="baixo-esquerda"></span>
@@ -130,15 +130,15 @@
                         <ul>
                             <li>
                                 <h3>Facilitador de treinamneto <strong>01/01/2018 - 01/01/2020</strong></h3>
-                                <p>Kenzie Academy Brasil</p>
+                                <p>Instituicão Senac</p>
                             </li>
                             <li>
                                 <h3>Facilitador de treinamneto <strong>01/01/2018 - 01/01/2020</strong></h3>
-                                <p>Kenzie Academy Brasil</p>
+                                <p>Instituicão Senac</p>
                             </li>
                             <li>
                                 <h3>Facilitador de treinamneto <strong>01/01/2018 - 01/01/2020</strong></h3>
-                                <p>Kenzie Academy Brasil</p>
+                                <p>Instituicão Senac</p>
                             </li>
 
                         </ul>
